Swingworker abbrechen erweitert, Fehlermeldung erscheint und Zusammenfassung meldet dass abgebrochen wurde TODO Liste bearbeitet, codecleanup